--- a/RV2015/Structure.tex
+++ b/RV2015/Structure.tex
@@ -1,5 +1,4 @@
 \section{Implementation}~\label{sec:structure} 
-
 %\begin{figure}[ht!]
 %  \begin{tikzpicture}[->, node distance=2.5cm, auto, shorten >=1pt, bend angle=45,
 %   thick]
@@ -34,9 +33,7 @@
 %  \caption{The Copilot verification  toolchain.}
  % \label{fig:toolchain}
 %\end{figure}
-
 %\jonathan{Add a Cnub node after Copilot Core and between TS and IL}
-
 In this section, we shall outline the structure of the implementation
 of our Copilot verification system.   %% Copilot is deeply embedded in
 %% Haskell.  A Copilot program is \emph{reified} (i.e. transformed from
@@ -62,7 +59,6 @@ format is similar to the one developed by Hagen~\cite{HagenPhD}, but customized 
 \end{itemize}
 
 \subsection{Approximating a specification}
-
 
 The complexity of the models that are built from Copilot specifications is
 limited by the power and expressiveness of the SMT solvers in use. For instance,
@@ -129,7 +125,7 @@ $$
 Let's say we want to check the property \texttt{fib > 0} which translates into $f(n) > 0$. This can be done in two steps of the $k$-induction seen in Section~\ref{sec:background} by taking \[T[n] \;\equiv\; \left(\, f(0) = 1 \,\wedge\,
 f(1) = 1 \,\wedge\, f(n + 2) = f(n + 1) + f(n) \,\right) \] \[P[n] \;\equiv\; \left(\, f(n) > 0 \,\right) \]
 and checking that both \[T[0] \,\wedge\, T[1] \,\wedge\, \neg \left( P[0] \,\wedge\, P[1] \right) \] and \[T[n] \,\wedge\, T[n + 1] \,\wedge\, P[n] \,\wedge\, P[n + 1] \,\wedge\, \neg P[n + 2] \]
-are non-satisfiable, the last one being equivalent to \[ \left[f(n+2) = f(n+1) + f(n)\right] \,\wedge\, \left[f(n) > 0\right] \,\wedge\, \left[f(n + 1) > 0\right] \,\wedge\, \left[f(n + 2) \leq 0\right]   \,\wedge\, \cdots \]
+are non-satisfiable, the last one being equivalent to \[ \left(f(n+2) = f(n+1) + f(n)\right) \,\wedge\, \left(f(n) > 0\right) \,\wedge\, \left(f(n + 1) > 0\right) \,\wedge\, \left(f(n + 2) \leq 0\right)   \,\wedge\, \cdots \]
 Therefore, as the reader can see in this simple example, the construction of \textsc{SmtLib} requests from an IL specification is pretty straightforward.
 
 
@@ -142,7 +138,7 @@ Here, a state consists of  the values of a finite set of variables, with types b
 
 \medskip
 
-The \textbf{TransSys} format is a modular encoding of such a state transition system. Related variables are grouped into \textit{nodes}, each node providing a distinct namespace and expressing some constraints between its variables. A significant task of the translation process to TransSys is to flatten the copilot specification so the value of all streams at time $n$ only depends on the values of all the streams at time $n - 1$ which is not the case in the Fibonacci example shown earlier. This is done by a simple program transformation which turns
+The {TransSys} format is a modular encoding of such a state transition system. Related variables are grouped into \textit{nodes}, each node providing a distinct namespace and expressing some constraints between its variables. A significant task of the translation process to TransSys is to flatten the copilot specification so the value of all streams at time $n$ only depends on the values of all the streams at time $n - 1$ which is not the case in the Fibonacci example shown earlier. This is done by a simple program transformation which turns
 \begin{lstlisting}
 fib = [1, 1] ++ (fib + drop 1 fib)
 \end{lstlisting}
