--- a/RV2015/paper.tex
+++ b/RV2015/paper.tex
@@ -134,10 +134,12 @@ Galois, Inc., Portland, OR, USA\\ \email{leepike@galois.com}
   are likely to be autonomous and cannot be assured by traditional
   means.  Runtime Verification (RV) can act as the last line of
   defense to protect the public safety, but only if the RV system
-  itself is trusted.  In this paper, we describe a verification system
+  itself is trusted.  In this paper, we describe a verification tool 
   for runtime monitors. This tool is integrated into the Copilot
   language and framework aimed at RV of ultra-critical hard real-time
-  systems.
+  systems.  In addition to describing its implementation, we
+  illustrate  its application on a number of examples ranging from very
+  simple to the Boyer-Moore majority vote algorithm. 
 \end{abstract}
 
 \input{intro}
