reworking to get to 15 pages

--- a/RV2015/Background.tex
+++ b/RV2015/Background.tex
@@ -1,7 +1,7 @@
 \section{Background on SMT-based $k-$induction}~\label{sec:background} 
 The focus of our  investigation has  been on applying model checking to  prove
 invariant properties of our monitors.   We  
-employ a powerful technique known as $k-$induction~\cite{Sheeran00,EenS03} that has been demonstrated to be successful for verifying inductive
+employ a  technique known as $k-$induction~\cite{Sheeran00,EenS03} that has been demonstrated to be successful for verifying inductive
 properties of infinite state systems.   $k-$induction  has the
 advantage that it is well suited  to  SMT 
 based bounded model checking. This section profiles the
