--- a/RV2015/Related.tex
+++ b/RV2015/Related.tex
@@ -35,16 +35,7 @@ languages with stream-based semantics, notably represented by the
 Lustre family of languages~\cite{lustre-intro}.  Copilot is a simpler
 language, particularly with respect to Lustre's clock calculus,
 focused on monitoring (as opposed to developing control systems).
-Copilot can be seen as an generalization of the idea of Lustre's
-``synchronous observers''~\cite{Halbwachs93}, which are Boolean-valued
-streams used to track properties about Lustre programs.  Whereas
-Lustre uses synchronous observers to monitor Lustre programs, we apply
-the idea to monitoring arbitrary periodically-scheduled real-time
-systems. Canovas-Dumas and Caspi have built a tool for verifying
-Lustre programs using the Prototype Verification System (PVS)
-interactive prover~\cite{Canovas-Dumas:2000} and as such can be
-applied to a much wider range of properties than the bounded model
-checking tools used in \texttt{Copilot-Kind}.  The work that is most
+The work that is most
 relevant the research presented in this paper is the application of
 the Kind model checking tool to verify Lustre programs~\cite{Hagen08}.
 Kind and its most recent incarnation~\cite{kind}is designed to model
@@ -56,3 +47,13 @@ sophisticated than published results using Kind with Lustre.
   
 
 
+%Copilot can be seen as an generalization of the idea of Lustre's
+%``synchronous observers''~\cite{Halbwachs93}, which are Boolean-valued
+%streams used to track properties about Lustre programs.  Whereas
+%Lustre uses synchronous observers to monitor Lustre programs, we apply
+%the idea to monitoring arbitrary periodically-scheduled real-time
+%systems. Canovas-Dumas and Caspi have built a tool for verifying
+%Lustre programs using the Prototype Verification System (PVS)
+%interactive prover~\cite{Canovas-Dumas:2000} and as such can be
+%applied to a much wider range of properties than the bounded model
+%checking tools used in \texttt{Copilot-Kind}. 
