--- a/RV2015/Structure.tex
+++ b/RV2015/Structure.tex
@@ -42,8 +42,8 @@ of our Copilot verification system.   %% Copilot is deeply embedded in
 After Copilot type-checking and compilation, a Copilot program is approximated
 so it can be expressed in a theory handled by most SMT solvers, as described below. Any information
 of no use for the model checking process is thrown away. The result of this
-process is encoded in the Cnub format, which is is structurally close to the
-Copilot core format but supports fewer datatypes and operators. Then, it can be
+process is encoded in Cnub format, which is is structurally close to the
+Copilot core format, but supports fewer datatypes and operators. Then, it can be
 translated into one of two available representation formats:
 
 \begin{itemize}
@@ -67,7 +67,9 @@ most SMT solvers do not handle real functions like trigonometric functions. More
 The {Cnub} format is aimed at approximating a copilot specification in a format relying on a simple theory including basic integer arithmetic, real arithmetic and uninterpreted functions. The stream structure is kept from the copilot core format but the following differences have to be emphasized:
 
 \begin{itemize}
-\item In contrast to the great diversity of numeric types available in Copilot, we restrain ourselves to three basic types which are handled by the \textsc{SmtLib} standard: \texttt{Bool}, \texttt{Integer} and \texttt{Real}. Problems related to integer overflows and floating point arithmetic are ignored.\footnote{In fact, there are techniques to model these effects anyway, as we discuss below.}
+\item In contrast to the great diversity of numeric types available in Copilot, we restrain ourselves to three basic types which are handled by the \textsc{SmtLib} standard: \texttt{Bool}, \texttt{Integer} and \texttt{Real}. Problems related to integer overflows and floating point arithmetic are ignored.
+
+%\footnote{In fact, there are techniques to model these effects anyway, as we discuss below.}
 
 
 \item {Uninterpreted functions} are used to model operators that are not
@@ -122,11 +124,11 @@ f(1) = 1 \\
 f(n + 2) = f(n + 1) + f(n)
 \end{array}
 $$
-Let's say we want to check the property \texttt{fib > 0} which translates into $f(n) > 0$. This can be done in two steps of the $k$-induction seen in Section~\ref{sec:background} by taking \[T[n] \;\equiv\; \left(\, f(0) = 1 \,\wedge\,
+Suppose  we want to check the property \texttt{fib > 0} which translates into $f(n) > 0$. This can be done in two steps of the $k$-induction seen in Section~\ref{sec:background} by taking \[T[n] \;\equiv\; \left(\, f(0) = 1 \,\wedge\,
 f(1) = 1 \,\wedge\, f(n + 2) = f(n + 1) + f(n) \,\right) \] \[P[n] \;\equiv\; \left(\, f(n) > 0 \,\right) \]
 and checking that both \[T[0] \,\wedge\, T[1] \,\wedge\, \neg \left( P[0] \,\wedge\, P[1] \right) \] and \[T[n] \,\wedge\, T[n + 1] \,\wedge\, P[n] \,\wedge\, P[n + 1] \,\wedge\, \neg P[n + 2] \]
 are non-satisfiable, the last one being equivalent to \[ \left(f(n+2) = f(n+1) + f(n)\right) \,\wedge\, \left(f(n) > 0\right) \,\wedge\, \left(f(n + 1) > 0\right) \,\wedge\, \left(f(n + 2) \leq 0\right)   \,\wedge\, \cdots \]
-Therefore, as the reader can see in this simple example, the construction of \textsc{SmtLib} requests from an IL specification is pretty straightforward.
+This simple example illustrates that  the construction of \textsc{SmtLib} requests from an IL specification is  straightforward.
 
 
 \subsection{The Kind2 prover and the {TransSys} format}
@@ -150,18 +152,18 @@ fib1 = [1] ++ (fib1 + fib0)
 
 After this, it is natural to associate a variable to each stream. Here, the variables \texttt{fib0} and \texttt{fib1} would be grouped into a single node, in order to keep some structure in the representation of the transition system\footnote{This can be important for two reasons. First, the model checker could use these structural informations to optimize its research. See \emph{structural abstraction} in \cite{HagenPhD}. Then, structured transition systems are easier to read, debug and transform. }. Such a modular transition system is almost ready to be translated into the Kind2 native format. However, we first have to merge each nodes pair whose components are mutually dependent as Kind2 requires a topological order on its nodes.
 
-\section{Relevance of the \textsc{SMT}-based approach}
-In practice, our tool turned out to be very useful for debugging purposes. Indeed, even when the property being checked is not inductive or the induction step is too hard, it is very useful to test the first entailment of the $k$-induction algorithm for small values of $k$, proving the property can't be violated in the first $k$ time steps or displaying a counterexample trace. Many subtle bugs can be captured for reasonable values of $k$. However, this does not solve our primary issue of formal verification.
+%\section{Relevance of the \textsc{SMT}-based approach}
+%In practice, our tool turned out to be very useful for debugging purposes. Indeed, even when the property being checked is not inductive or the induction step is too hard, it is very useful to test the first entailment of the $k$-induction algorithm for small values of $k$, proving the property cannot be violated in the first $k$ time steps or displaying a counterexample trace. Many subtle bugs can be captured for reasonable values of $k$. However, this does not solve our primary issue of formal verification.
 
-One limitation of our tool as a proving system is related to the $k$-induction algorithm itself, as writing $k$-inductive specifications can be long and mind-twisting. Some more subtle algorithms like the \textsc{IC}3 algorithm implemented by Kind2 are aimed at proving non-inductive properties by splitting it into concise and relevant inductive lemmas. However, our experiments showed that currently available tools fail at proving very simple properties as soon as basic arithmetic is involved.
-
-
-\bigskip
+%One limitation of our tool as a proving system is related to the $k$-induction algorithm itself, as writing $k$-inductive specifications can be long and mind-twisting. Some more subtle algorithms like the \textsc{IC}3 algorithm implemented by Kind2 are aimed at proving non-inductive properties by splitting it into concise and relevant inductive lemmas. However, our experiments showed that currently available tools fail at proving very simple properties as soon as basic arithmetic is involved.
 
 
-That being said, the essential limitations of our approach unsurprinsingly result from the limitations of \textsc{smt} solvers it relies on. 
+%\bigskip
 
-First, \textsc{smt}-solvers turn to become quickly prohibitively slow as the size of their input increases, making \textsc{smt}-based techniques intrinsinctly difficult to scale. Moreover, time performance of these tools is often unpredictable and depends on opaque implementation details. For instance, the serial majority vote algorithm presented in Section~\ref{sec:example} can be checked in less than one minute with the Z3 \textsc{smt}-solver on any decent personal computer, whereas Yices does not terminate after several hours of computation.
 
-Besides, as quantifiers are not handled (at least efficiently) by \textsc{smt}-solvers, it is difficult to work with quantified lemmas which can be applied at several places, making this way proofs concise enough to be tractable. The same limitation makes it difficult to deal with general properties of complex objects which are not handled by \textsc{smt} solvers like special real-valued functions. Indeed, some proofs might rely on some facts like $\forall x. -1 \leq \sin x \leq 1$ whose \textsc{smt}-solvers can't handle unless they are hard-wired in a supported theory. A promising way to deal with both these issues would be an extension of the \textit{proof scheme} system where properties involving arbitrary streams are seen as universally quantified lemmas which can be specialized and added to the proof context by an explicit use of a new \texttt{apply} directive. 
+%That being said, the essential limitations of our approach unsurprinsingly result from the limitations of \textsc{smt} solvers it relies on. 
+
+%First, \textsc{smt}-solvers turn to become quickly prohibitively slow as the size of their input increases, making \textsc{smt}-based techniques intrinsinctly difficult to scale. Moreover, time performance of these tools is often unpredictable and depends on opaque implementation details. For instance, the serial majority vote algorithm presented in Section~\ref{sec:example} can be checked in less than one minute with the Z3 \textsc{smt}-solver on any decent personal computer, whereas Yices does not terminate after several hours of computation.
+
+%Besides, as quantifiers are not handled (at least efficiently) by \textsc{smt}-solvers, it is difficult to work with quantified lemmas which can be applied at several places, making this way proofs concise enough to be tractable. The same limitation makes it difficult to deal with general properties of complex objects which are not handled by \textsc{smt} solvers like special real-valued functions. Indeed, some proofs might rely on some facts like $\forall x. -1 \leq \sin x \leq 1$ whose \textsc{smt}-solvers can't handle unless they are hard-wired in a supported theory. A promising way to deal with both these issues would be an extension of the \textit{proof scheme} system where properties involving arbitrary streams are seen as universally quantified lemmas which can be specialized and added to the proof context by an explicit use of a new \texttt{apply} directive. 
 
