--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -5,11 +5,10 @@ verification challenges facing ultra-critical
 systems~\cite{pike-rv-11,rvRushby}.  As RV matures it will be employed to
 verify increasingly complex properties such as checking complex
 stability properties of a control system or ensuring that a critical
-system is fault-tolerant. As interest grows in techniques
-such as adaptive flight control and fully autonomous vehicles that
-utilize learning to adapt to unpredictable environments, RV may be a
+system is fault-tolerant. RV may be a
 way to regain the necessary level of predictability required of
-ultra-critical systems.  As RV is applied to more complex systems, the
+ultra-critical systems  in fully autonomous vehicles that
+utilize learning to adapt to unpredictable environments.  As RV is applied to more complex systems, the
 monitors themselves will become increasing sophisticated and as prone to error
 as the system being monitored.  Applying formal verification
 tools to the monitors to ensure they are correct can help safeguard
@@ -46,7 +45,7 @@ implementation of $k$-induction using Yices~\cite{Dutertre:cav2014} and a backen
 \emph{Kind2}, implementing both $k$-induction and the IC3~algorithm~\cite{Somenzi-FMCAD11}.
 
 After providing a brief introduction to Copilot in Section~\ref{sec:co-intro}
-and to SMT-based $k$-induction in Section~\ref{sec:background}, we introduce
+and to Satisfiability Modulo Theories (SMT)-based $k$-induction in Section~\ref{sec:background}, we introduce
 \texttt{copilot-kind} in Section~\ref{sec:prover}. Illustrative examples of
 \texttt{copilot-kind} of its use are provided in Section~\ref{sec:example}, and
 implementation details are given in Section~\ref{sec:structure}. The final two
