--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -9,7 +9,7 @@ system is fault-tolerant. RV may be a
 way to regain the necessary level of predictability required of
 ultra-critical systems  in fully autonomous vehicles that
 utilize learning to adapt to unpredictable environments.  As RV is applied to more complex systems, the
-monitors themselves will become increasing sophisticated and as prone to error
+monitors themselves will become increasingly sophisticated and as prone to error
 as the system being monitored.  Applying formal verification
 tools to the monitors to ensure they are correct can help safeguard
 that the last line of defense is actually effective.
