--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -30,7 +30,7 @@ monitor.
 These guiding principles are informing the continuing development of the
 Copilot~\cite{copilot,pike-isse-13} language and framework that is intended to
 be used in RV of ultra-critical systems.  Earlier work~\cite{pike-icfp-12}
-focused verifying that the monitor synthesis \emph{process} is correct
+focused on verifying that the monitor synthesis \emph{process} is correct
 (Requirement~\ref{req:c} above). Here, the focus
 is on the second requirement for high-assurance RV - making sure the monitor
 specification is correct. Requirement~\ref{req:a}, in the spirit of Rushby's
