--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -45,7 +45,7 @@ implementation of $k$-induction using Yices~\cite{Dutertre:cav2014} and a backen
 \emph{Kind2}, implementing both $k$-induction and the IC3~algorithm~\cite{Somenzi-FMCAD11}.
 
 After providing a brief introduction to Copilot in Section~\ref{sec:co-intro}
-and to Satisfiability Modulo Theories (SMT)-based $k$-induction in Section~\ref{sec:background}, we introduce
+and to Satisfiability Modulo Theories (\textsc{smt})-based $k$-induction in Section~\ref{sec:background}, we introduce
 \texttt{copilot-kind} in Section~\ref{sec:prover}. Illustrative examples of
 \texttt{copilot-kind} of its use are provided in Section~\ref{sec:example}, and
 implementation details are given in Section~\ref{sec:structure}. The final two
