--- a/RV2015/Structure.tex
+++ b/RV2015/Structure.tex
@@ -150,7 +150,7 @@ fib0 = [1] ++ fib1
 fib1 = [1] ++ (fib1 + fib0)
 \end{lstlisting}
 
-After this, it is natural to associate a variable to each stream. Here, the variables \texttt{fib0} and \texttt{fib1} would be grouped into a single node, in order to keep some structure in the representation of the transition system\footnote{This can be important for two reasons. First, the model checker could use these structural informations to optimize its research. See \emph{structural abstraction} in \cite{HagenPhD}. Then, structured transition systems are easier to read, debug and transform. }. Such a modular transition system is almost ready to be translated into the Kind2 native format. However, we first have to merge each nodes pair whose components are mutually dependent as Kind2 requires a topological order on its nodes.
+After this, it is natural to associate a variable to each stream. Here, the variables \texttt{fib0} and \texttt{fib1} would be grouped into a single node, in order to keep some structure in the representation of the transition system\footnote{This can be important for two reasons. First, the model checker could use these structural informations to optimize its research. See \emph{structural abstraction} in \cite{HagenPhD}. Then, structured transition systems are easier to read, debug and transform. }. Such a modular transition system is almost ready to be translated into the Kind2 native format. However, we first have to merge each node's pair whose components are mutually dependent as Kind2 requires a topological order on its nodes.
 
 %\section{Relevance of the \textsc{SMT}-based approach}
 %In practice, our tool turned out to be very useful for debugging purposes. Indeed, even when the property being checked is not inductive or the induction step is too hard, it is very useful to test the first entailment of the $k$-induction algorithm for small values of $k$, proving the property cannot be violated in the first $k$ time steps or displaying a counterexample trace. Many subtle bugs can be captured for reasonable values of $k$. However, this does not solve our primary issue of formal verification.
