--- a/RV2015/prover.tex
+++ b/RV2015/prover.tex
@@ -139,7 +139,7 @@ rather than
 check "neq0" 
 \end{lstlisting}
 A \emph{proof scheme} is a chain of
-primitives schemes glued by the $\texttt{\textgreater{}\textgreater{}}$
+primitive schemes glued by the $\texttt{\textgreater{}\textgreater{}}$
 operator to combine proofs, and in particular, provide lemmas. The available primitives are:
 
 \begin{itemize}
