some typos fixed and simple rewording a few sentences

--- a/RV2015/Related.tex
+++ b/RV2015/Related.tex
@@ -1,5 +1,5 @@
 \section{Related Work}\label{sec:related}
-The research reported on here builds on recent  research conducted in a number
+The research reported here builds on recent  research conducted in a number
 of areas including formal verification, functional programming and
 DSL design, and RV. 
 
@@ -39,7 +39,7 @@ The work that is most
 relevant the research presented in this paper is the application of
 the Kind model checking tool to verify Lustre programs~\cite{Hagen08}.
 Kind and its most recent incarnation~\cite{kind} is designed to model
-check Lustre programs and due to the similarities of the Copilot a
+check Lustre programs and due to the similarities between Copilot and
 Lustre we targeted the Kind2 prover to be one of our back ends as
 well.  Yet, to the best of our knowledge, the Boyer-Moore majority
 voting examples given in Section~\ref{sec:mvote} are more
